add-list-scroll

--- a/List.xaml
+++ b/List.xaml
@@ -8,15 +8,146 @@
         Title="List" Height="450" Width="800">
     <ScrollViewer CanContentScroll="True">
         <StackPanel>
-            <Button Width="400" Height="100">but1</Button>
-            <Button Width="400" Height="100">but2</Button>
-            <Button Width="400" Height="100">but3</Button>
-            <Button Width="400" Height="100">but4</Button>
-            <Button Width="400" Height="100">but5</Button>
-            <Button Width="400" Height="100">but6</Button>
-            <Button Width="400" Height="100">but4</Button>
-            <Button Width="400" Height="100"></Button>
-            
+            <StackPanel Name="panel1" Height="50">
+                <Label Content="Name1" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname1" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book1" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate1" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate1" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel2" Height="50">
+                <Label Content="Name2" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname2" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book2" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate2" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate2" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel3" Height="50">
+                <Label Content="Name3" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname3" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book3" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate3" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate3" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel4" Height="50">
+                <Label Content="Name4" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname4" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book4" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate4" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate4" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel5" Height="50">
+                <Label Content="Name5" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname5" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book5" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate5" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate5" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel6" Height="50">
+                <Label Content="Name6" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname6" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book6" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate6" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate6" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel7" Height="50">
+                <Label Content="Name7" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname7" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book7" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate7" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate7" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel8" Height="50">
+                <Label Content="Name8" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname8" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book8" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate8" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate8" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel9" Height="50">
+                <Label Content="Name9" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname9" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book9" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate9" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate9" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel10" Height="50">
+                <Label Content="Name10" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname10" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book10" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate10" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate10" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel11" Height="50">
+                <Label Content="Name11" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname11" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book11" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate11" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate11" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel12" Height="50">
+                <Label Content="Name12" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname12" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book12" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate12" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate12" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel13" Height="50">
+                <Label Content="Name13" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname13" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book13" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate13" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate13" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel14" Height="50">
+                <Label Content="Name14" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname14" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book14" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate14" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate14" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel15" Height="50">
+                <Label Content="Name15" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname15" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book15" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate15" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate15" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel16" Height="50">
+                <Label Content="Name16" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname16" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book16" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate16" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate16" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel17" Height="50">
+                <Label Content="Name17" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname17" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book17" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate17" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate17" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel18" Height="50">
+                <Label Content="Name18" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname18" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book18" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate18" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate18" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel19" Height="50">
+                <Label Content="Name19" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname19" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book19" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate19" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate19" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
+            <StackPanel Name="panel20" Height="50">
+                <Label Content="Name20" FontSize="20" Margin="0,5,0,0"></Label>
+                <Label Content="Surname20" FontSize="20" Margin="100,-36,0,0"></Label>
+                <Label Content="Book20" FontSize="20" Margin="250,-36,0,0"></Label>
+                <Label Content="TakeDate20" FontSize="20" Margin="350,-36,0,0"></Label>
+                <Label Content="RetutrnDate20" FontSize="20" Margin="500,-36,0,0"></Label>
+            </StackPanel>
         </StackPanel>
     </ScrollViewer>
 </Window>
