--- a/AddDebt.xaml
+++ b/AddDebt.xaml
@@ -8,11 +8,11 @@
         Title="AddDebt" Height="450" Width="800">
     <Grid>
         <Label Width="400" Height="40" Margin="-220,-370,0,0" FontSize="25">Имя:</Label>
-        <TextBox Name="nameText" Width="500" Height="40" Margin="-120,-280,0,0"></TextBox>
+        <TextBox Name="nameText" Width="500" FontSize="25" Height="40" Margin="-120,-280,0,0"></TextBox>
         <Label  Width="400" Height="40" Margin="-220,-170,0,0" FontSize="25">Фамилия:</Label>
-        <TextBox Name="surnameText" Width="500" Height="40" Margin="-120,-80,0,0"></TextBox>
+        <TextBox Name="surnameText" Width="500" FontSize="25" Height="40" Margin="-120,-80,0,0"></TextBox>
         <Label Width="400" Height="40" Margin="-220,30,0,0" FontSize="25">Книга:</Label>
-        <TextBox Name="bookText" Width="500" Height="40" Margin="-120,120,0,0"></TextBox>
+        <TextBox Name="bookText" Width="500" FontSize="25" Height="40" Margin="-120,120,0,0"></TextBox>
         <Label Width="400" Height="40" Margin="-220,230,0,0" FontSize="25">Класс:</Label>
         <TextBox Name="gradeText" FontSize="25" Width="160" Height="40" Margin="-290,239,0,0"></TextBox>
         <Label Width="180" Height="45" Margin="200,230,0,0" FontSize="25">Срок (дней):</Label>
