--- a/List.xaml
+++ b/List.xaml
@@ -9,7 +9,9 @@
     <ScrollViewer CanContentScroll="True">
         
         <StackPanel>
-            <Button Width="100" Height="50" Click="mainMenu">Главное меню</Button>
+            <Button Width="100" Height="50" Margin="-1000,0,0,0" Click="mainMenu">Главное меню</Button>
+            <TextBox Name="searchBar" Width="500" Height="50" Margin="350,-40,0,0"></TextBox>
+            <Button Width="100" Height="50" Margin="1000,-50,0,0" FontSize="20" Click="search">Поиск</Button>
         <StackPanel Name ="panel1" Height="50" Margin="0,50,0,0">
             
                 <Label Width="100" Name="Name1" FontSize="20" Margin="-1050,0,0,0">aaa</Label>
